# detypify

./: .gitignore  .gitmodules  .prettierignore  LICENSE  README.md  bun.lockb  index.html  manifest.webmanifest  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  ruff.toml  supported-symbols.txt  svelte.config.js  sw.js  tailwind.config.cjs  vite.config.js  workbox-2dfdff9b.js
.github/workflows/: frontend.yml  py-code-check.yml  py-weekly-update.yaml  py-weekly-update.yml  python.yml
assets/: index-BV4ujCFg.css  index-DF5pbS77.css  index-DhS4MPt6.js  index-Dm6YRw4T.js  index-LhPyG44w.js  index-dNsr3tVP.css  model-C_C_cCv5.onnx  supported-symbols.txt  tex_to_typ_extra.csv
bot/: __init__.py
frontend/service/: README.md  index.d.ts  package.json
frontend/service/src/: index.ts
frontend/ui/: README.md  index.html  package.json  svelte.config.js  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/ui/scripts/: subset-font.ts
frontend/ui/src/: App.svelte  app.css  main.ts  store.ts
frontend/ui/src/components/: Alert.svelte  Candidate.svelte  Canvas.svelte  ContribPanel.svelte  NavBar.svelte  Preview.svelte
frontend/ui/src/lib/: Candidate.svelte  Canvas.svelte  Card.svelte  ContribPanel.svelte  CopyButton.svelte  Counter.svelte  NavBar.svelte  Preview.svelte
frontend/ui/src/routes/: Contrib.svelte  FAQ.svelte  Home.svelte
frontend/ui/src/utils/: Button.svelte  Card.svelte  CopyButton.svelte
frontend/web/: App.svelte  app.pcss  index.html  package.json  store.js  svelte.config.js  tailwind.config.cjs  vite.config.js
frontend/web/components/: ContribPanel.svelte  NavBar.svelte  Preview.svelte
frontend/web/utils/: Card.svelte  CopyButton.svelte
frontend/worker/: README.md  main.js  package.json  schema.sql  tsconfig.json  worker-configuration.d.ts  wrangler.toml
frontend/worker/src/: index.ts
migrate/: __init__.py  font.py
pre/: __init__.py  gen_map.zsh
python/: README.md  TODOs.md  bot.py  callbacks.py  dataset.py  datasets.py  extract_mathwriting.py  migrate-font.py  migrate.py  model.py  proc_contrib.py  proc_data.py  proc_font.py  review_contrib.py  test_model.py  tex_to_typ.json  tex_to_typ.yaml  train.py
python/detypify/: __init__.py  config.py  types.py
python/detypify/assets/: tex_to_typ_sup.yaml
python/detypify/data/: __init__.py  datasets.py  metadata.py  paths.py  raw_sources.py  rendering.py  symbols.py
python/detypify/tools/: __init__.py  review_contrib.py
python/detypify/training/: __init__.py  callbacks.py  datamodule.py  model.py
service/: README.md  index.d.ts  index.js  package.json
train/: __init__.py  __main__.py  preprocess.py  strokes.py
web/: App.svelte  app.pcss  index.html  main.js  store.js
web/components/: Alert.svelte  Candidate.svelte  Canvas.svelte  ContribPanel.svelte  EditArea.svelte  Infer.svelte  NavBar.svelte  Preview.svelte
web/public/: CNAME
web/utils/: Button.svelte
worker/: main.js  package.json
