[project]
name = "detypify-model"
version = "0.2.4"
requires-python = ">=3.13, <3.14"
authors = [
  { name = "QuarticCat", email = "QuarticCat@pm.me" },
  { name = "Cloud0310", email = "gh@touchingfish.day" },
]
dependencies = [
  # required for training
  "datasets>=4.5.0",
  "lightning>=2.6.0",
  "msgspec>=0.20.0",
  "onnx>=1.20.0",
  "onnxscript>=0.5.7",
  "pillow>=12.0.0",
  "timm>=1.0.22",
  "typed-argument-parser>=1.11.0",
]

[project.optional-dependencies]
cpu = ["torch", "torchvision"]
cu130 = ["torch", "torchvision"]
data = [
  "lxml>=6.0.2",
  "lxml-stubs>=0.5.1",
  "beautifulsoup4>=4.14.3",
  "fonttools[woff]>=4.61.0",
  "polars>=1.34.0",
  "vortex-data>=0.58.0",
  "huggingface-hub>=1.3.3",
]

[dependency-groups]
dev = [
  # lsp & linters
  "pyrefly",
  "zuban",
  "ruff",
  # training logs
  "tensorboard>=2.20.0",
  "tensorboardx>=2.6.4",
  "torch-tb-profiler>=0.4.3",
  # misc
  "ipykernel",
  "viztracer>=1.1.1",
]


# linter and formatter, line length 88 as black default
[tool.ruff]
line-length = 88

# default set and isort
[tool.ruff.lint]
extend-select = [
  "A", # Detect shadowed builtins
  "F", # Pyflakes rules
  "W", # PyCodeStyle warnings
  "E", # PyCodeStyle errors
  "I", # Sort imports properly
  "N", # Naming conventions
  "S", # Security
  "UP", # Warn if certain things can changed due to newer Python versions
  "C4", # Catch incorrect use of comprehensions, dict, list, etc
  "FA", # Enforce from __future__ import annotations
  "ISC", # Good use of string concatenation
  "ARG", # Unused Arguments
  "ICN", # Use common import conventions
  "RET", # Good return practices
  "SIM", # Common simplification rules
  "TID", # Some good import practices
  "TC", # Enforce importing certain types in a TYPE_CHECKING block
  "PTH", # Use pathlib instead of os.path
  "NPY", # Some numpy-specific things
]

[tool.uv]
conflicts = [[{ extra = "cpu" }, { extra = "cu130" }]]
environments = ["sys_platform == 'linux'", "sys_platform == 'win32'"]

[tool.uv.sources]
torch = [{ index = "pytorch-cpu", extra = "cpu" }, { index = "pytorch-cu130", extra = "cu130" }]
torchvision = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu130", extra = "cu130" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

# zuban sys.path finding, for python lsp
[tool.zuban]
mypy_path = ["python"]
