[project]
name = "detypify-model"
version = "0.2.4"
requires-python = ">=3.13, <3.14"
authors = [
  { name = "QuarticCat", email = "QuarticCat@pm.me" },
  { name = "Cloud0310", email = "gh@touchingfish.day" },
]
dependencies = [
  "datasets>=4.5.0",
  "lightning>=2.6.0",
  "msgspec>=0.20.0",
  "onnx>=1.20.0",
  "onnxscript>=0.5.7",
  "opencv-python-headless>=4.13.0.90",
  "timm>=1.0.22",
  "torch",
  "torchvision",
]

[project.optional-dependencies]
data = [
  "lxml>=6.0.2",
  "lxml-stubs>=0.5.1",
  "beautifulsoup4>=4.14.3",
  "polars>=1.34.0",
  "vortex-data>=0.58.0",
  "huggingface-hub>=1.3.3",
]

[dependency-groups]
dev = [
  # data wrangler
  "ipykernel",
  # ort export
  "matplotlib>=3.10.8",
  "onnxruntime>=1.23.2",
  # lsp
  "pyrefly",
  # formatter and linter
  "ruff",
  # training logs
  "tensorboard>=2.20.0",
  "tensorboardx>=2.6.4",
  "torch-tb-profiler>=0.4.3",
  # profiler
  "viztracer>=1.1.1",
  # lsp, type checker
  "zuban",
]

[tool.pyrefly]
search-path = ["./python"]

# linter and formatter, line length 88 as black default
[tool.ruff]
line-length = 88

# default set and isort
[tool.ruff.lint]
extend-select = [
  "A",  # Detect shadowed builtins
  "F",  # Pyflakes rules
  "W",  # PyCodeStyle warnings
  "E",  # PyCodeStyle errors
  "I",  # Sort imports properly
  "N",  # Naming conventions
  "UP",  # Warn if certain things can changed due to newer Python versions
  "C4",  # Catch incorrect use of comprehensions, dict, list, etc
  "FA",  # Enforce from __future__ import annotations
  "ISC",  # Good use of string concatenation
  "ARG",  # Unused Arguments
  "ICN",  # Use common import conventions
  "RET",  # Good return practices
  "SIM",  # Common simplification rules
  "TID",  # Some good import practices
  "TC",  # Enforce importing certain types in a TYPE_CHECKING block
  "PTH",  # Use pathlib instead of os.path
  "NPY",  # Some numpy-specific things
]

[tool.uv]
environments = ["sys_platform == 'linux'", "sys_platform == 'win32'"]

[tool.uv.sources]
torch = [{ index = "pytorch-cu130" }]
torchvision = [{ index = "pytorch-cu130" }]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

# zuban sys.path finding, for lsp
[tool.zuban]
mypy_path = ["python"]
