[project]
name = "detypify-model"
version = "0.3.0"
requires-python = ">=3.13, <3.14"
authors = [
  { name = "QuarticCat", email = "QuarticCat@pm.me" },
  { name = "Cloud0310", email = "gh@touchingfish.day" },
]
dependencies = [
  "datasets>=4.5.0",
  "lightning>=2.6.0",
  "msgspec>=0.20.0",
  "onnx>=1.20.0",
  "onnxscript>=0.5.7",
  "opencv-python-headless>=4.13.0.90",
  "timm>=1.0.22",
  "typer>=0.21.1",
]

[project.optional-dependencies]
cpu = ["torch>=2.6.0", "torchvision"]
cuda = [
  "torch>=2.6.0 ; sys_platform != 'darwin'",
  "torchvision ; sys_platform != 'darwin'"
]
data = [
  "lxml>=6.0.2",
  "lxml-stubs>=0.5.1",
  "beautifulsoup4>=4.14.3",
  "polars>=1.34.0",
]
rocm = [
  "torch>=2.6.0",
  "torchvision",
  "triton-rocm>=3.6.0 ; sys_platform == 'linux'",
]

[dependency-groups]
dev = [
  # for data wrangler
  "ipykernel",
  "matplotlib>=3.10.8",
  # ort export
  "onnxruntime>=1.23.2",
  # lsp
  "pyrefly",
  # formatter and linter
  "ruff",
  # training logs
  "setuptools==81.0",
  "tensorboard>=2.20.0",
  "tensorboardx>=2.6.4",
  "torch-tb-profiler>=0.4.3",
  # profiler
  "viztracer>=1.1.1",
  # lsp
  "zuban",
]

[tool.pyrefly]
search-path = ["./python"]

[tool.uv]
environments = ["sys_platform == 'linux'", "sys_platform == 'win32'"]
conflicts = [
  [
    { extra = "cpu" },
    { extra = "cuda" },
    { extra = "rocm" },
  ],
]

# target torch to CPU, CUDA or RoCM
[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu130", extra = "cuda", marker = "platform_system != 'Darwin'" },
  { index = "pytorch-rocm", extra = "rocm", marker = "platform_system == 'Linux'" },
]
torchvision = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu130", extra = "cuda", marker = "platform_system != 'Darwin'" },
  { index = "pytorch-rocm", extra = "rocm", marker = "platform_system == 'Linux'" },
]
triton-rocm = [
  { index = "pytorch-rocm", extra = "rocm", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[[tool.uv.index]]
name = "pytorch-rocm"
url = "https://download.pytorch.org/whl/rocm7.2"
explicit = true

# zuban sys.path finding, for lsp
[tool.zuban]
mypy_path = ["python"]
